[gd_scene load_steps=17 format=3 uid="uid://bsyhye204i2b3"]

[ext_resource type="PackedScene" uid="uid://cqfoa4vp1cjuf" path="res://Scenes/board.tscn" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://cb6n6tawxpwvx" path="res://Scripts/counters.gd" id="2_8gbba"]
[ext_resource type="Script" uid="uid://dn6skr57u7fla" path="res://Scripts/mouse.gd" id="2_bo1nx"]
[ext_resource type="Script" uid="uid://i4c7aopoiux" path="res://Scripts/end_game.gd" id="4_jjvhh"]
[ext_resource type="StyleBox" uid="uid://dfxu4hvvhic47" path="res://Assets/normal_button.tres" id="5_kry3j"]
[ext_resource type="Texture2D" uid="uid://b0xbd2cnb8vyf" path="res://Assets/undo.svg" id="6_21xkr"]
[ext_resource type="Texture2D" uid="uid://ovdk4qdejqp5" path="res://Assets/restart.svg" id="7_6bp64"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8gbba"]
bg_color = Color(0, 0, 0, 0.862745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjvhh"]
bg_color = Color(1, 1, 1, 0.894118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_344ge"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.917647)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynf5e"]
bg_color = Color(0.294118, 0.294118, 0.294118, 0.929412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hptm8"]
bg_color = Color(0.415686, 0.415686, 0.415686, 0.894118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1ilt"]
bg_color = Color(0.0846899, 0.0846899, 0.0846899, 0.913725)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bp64"]
bg_color = Color(0.800491, 0.800491, 0.800491, 0.894118)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21xkr"]
bg_color = Color(0.601223, 0.601223, 0.601223, 0.894118)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_6bp64"]
font_size = 27

[node name="Main" type="Node2D"]

[node name="Board" parent="." instance=ExtResource("1_jjgbg")]
position = Vector2(32, 32)

[node name="Counters" type="Node2D" parent="."]
script = ExtResource("2_8gbba")

[node name="Mouse" type="StaticBody2D" parent="."]
position = Vector2(1144, 1064)
script = ExtResource("2_bo1nx")
counter_radius_factor = 2.15

[node name="End game" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_jjvhh")
metadata/_edit_use_anchors_ = true

[node name="Black win" type="RichTextLabel" parent="End game"]
visible = false
layout_mode = 0
offset_left = 80.0
offset_top = 200.0
offset_right = 880.0
offset_bottom = 337.0
tooltip_text = "Black won this game!"
theme_override_font_sizes/normal_font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_8gbba")
text = "Black Won!"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="White win" type="RichTextLabel" parent="End game"]
visible = false
layout_mode = 0
offset_left = 80.0
offset_top = 200.0
offset_right = 880.0
offset_bottom = 337.0
tooltip_text = "White won this game!"
theme_override_font_sizes/normal_font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_jjvhh")
bbcode_enabled = true
text = "[color=black]White Won!"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play again" type="Button" parent="End game"]
visible = false
layout_mode = 0
offset_left = 320.0
offset_top = 687.5
offset_right = 641.0
offset_bottom = 784.5
tooltip_text = "Restart the game!"
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_344ge")
theme_override_styles/hover = SubResource("StyleBoxFlat_ynf5e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hptm8")
theme_override_styles/normal = SubResource("StyleBoxFlat_d1ilt")
text = "Play Again!"

[node name="End request" type="ColorRect" parent="End game"]
visible = false
layout_mode = 0
offset_left = 180.0
offset_top = 285.0
offset_right = 780.0
offset_bottom = 585.0
color = Color(0, 0, 0, 0.862745)

[node name="Yes" type="Button" parent="End game/End request"]
layout_mode = 0
offset_left = 52.0
offset_top = 163.0
offset_right = 252.0
offset_bottom = 260.0
tooltip_text = "Restart the game!"
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("5_kry3j")
theme_override_styles/hover = SubResource("StyleBoxFlat_6bp64")
theme_override_styles/pressed = SubResource("StyleBoxFlat_21xkr")
theme_override_styles/normal = ExtResource("5_kry3j")
text = "Yes"

[node name="No" type="Button" parent="End game/End request"]
layout_mode = 0
offset_left = 348.0
offset_top = 163.0
offset_right = 548.0
offset_bottom = 260.0
tooltip_text = "Cancel"
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = ExtResource("5_kry3j")
theme_override_styles/hover = SubResource("StyleBoxFlat_6bp64")
theme_override_styles/pressed = SubResource("StyleBoxFlat_21xkr")
theme_override_styles/normal = ExtResource("5_kry3j")
text = "No"

[node name="End request label" type="Label" parent="End game/End request"]
layout_mode = 0
offset_left = 4.0
offset_top = 51.0
offset_right = 596.0
offset_bottom = 99.0
text = "Are you sure you want to end the game?"
label_settings = SubResource("LabelSettings_6bp64")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button undo" type="Button" parent="."]
custom_minimum_size = Vector2(75, 75)
offset_left = 960.0
offset_top = 24.0
offset_right = 1035.0
offset_bottom = 99.0
icon = ExtResource("6_21xkr")
icon_alignment = 1
expand_icon = true

[node name="Button restart" type="Button" parent="."]
custom_minimum_size = Vector2(75, 75)
offset_left = 960.0
offset_top = 120.0
offset_right = 1035.0
offset_bottom = 195.0
icon = ExtResource("7_6bp64")
icon_alignment = 1
expand_icon = true

[connection signal="game_ended" from="Mouse" to="End game" method="_on_mouse_game_ended"]
[connection signal="pressed" from="End game/Play again" to="Mouse" method="_on_play_again_pressed"]
[connection signal="pressed" from="End game/Play again" to="End game" method="_on_play_again_pressed"]
[connection signal="pressed" from="End game/End request/Yes" to="Mouse" method="_on_play_again_pressed"]
[connection signal="pressed" from="End game/End request/Yes" to="End game" method="_on_yes_pressed"]
[connection signal="pressed" from="End game/End request/No" to="Mouse" method="_on_no_pressed"]
[connection signal="pressed" from="End game/End request/No" to="End game" method="_on_no_pressed"]
[connection signal="pressed" from="Button undo" to="Mouse" method="_on_button_pressed"]
[connection signal="pressed" from="Button restart" to="End game" method="_on_button_restart_pressed"]
